# ai-workbench

./: LICENSE  README.md
skills/scaffold-fastapi/: SKILL.md
skills/scaffold-fastapi/templates/: AGENTS.md  GUIDE.md  README.md  pyproject.toml
skills/scaffold-fastapi/templates/alembic/: env.py
skills/scaffold-fastapi/templates/app/: __init__.py  database.py  main.py
skills/scaffold-fastapi/templates/app/controllers/: __init__.py  item.py
skills/scaffold-fastapi/templates/app/core/: __init__.py  client_ip.py  config.py  exception_handler.py  security.py
skills/scaffold-fastapi/templates/app/middleware/: __init__.py  log.py  middleware.py
skills/scaffold-fastapi/templates/app/models/: __init__.py  item.py
skills/scaffold-fastapi/templates/app/routes/: __init__.py  health.py  items.py
skills/scaffold-fastapi/templates/app/schemas/: __init__.py  common.py  item.py
skills/scaffold-fastapi/templates/app/services/: __init__.py
skills/scaffold-fastapi/templates/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
skills/scaffold-fastapi/templates/dotfiles/: cursorignore  dockerignore  env.example  gitignore  pre-commit-config.yaml
skills/scaffold-fastapi/templates/github/: dependabot.yml  pull_request_template.md
skills/scaffold-fastapi/templates/tests/: conftest.py  test_health.py  test_items.py
skills/scaffold-fastapi/templates/vscode/: settings.json
