[project]
name = "__PROJECT_SLUG__"
version = "0.1.0"
description = "__PROJECT_DESCRIPTION__"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.120.2",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "sentry-sdk[fastapi]>=2.43.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.7.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
exclude = ["^alembic/"]
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
# Not `strict = true` yet — that's a lot of upfront friction for a fresh scaffold.
# Tighten incrementally (start with `disallow_untyped_defs = true` on `app/core`
# and `app/models`) once the codebase has grown past the example resource.
